# C_project

./:  Client.c  .gitignore  CMakeLists.txt  README.md  Server.c  Server.h  business.c  business.h  db_mysql_test.c  main.c  socket_server.c  socket_server.h  sql.c  sql.h  sql_test.c  temp.c  test.c
UI/: MainWindow.py  SignIn.py
UI/utils/: Singleton.py  SingletonQueue.py  SingletonTcpSocket.py  SocketClientThread.py
db_mysql/: db_interface.c  db_interface.h  db_mysql.c  db_mysql.h  db_mysql_test.c
list/: list.h  main.c
socke/: socket_server.c  socket_server.h
